nats-micro/tests/ui/service_error_invalid_internal.rs
use nats_micro::service_error;

#[service_error]
pub enum DemoError {
    #[internal(false)]
    #[error("bad")]
    Bad,
}

fn main() {}
